feat : 상품추가에서 이미지업로드 기능 구현 완료

--- a/src/pages/manage_products.html
+++ b/src/pages/manage_products.html
@@ -49,12 +49,8 @@
                             </div>
                             <div>
                                 <label for="img">이미지</label>
-                                <input type="text" class="update-img" name="img" />
-                                <form action="http://localhost:5500/books/upload" method="post" enctype="multipart/form-data">
-                                    <input type="file" name="img" accept="image/jpeg, image/png" />
-                                    <button type="submit">Upload Image</button>
+                                    <input class = "update-img "type="file" name="img" accept="image/jpeg, image/png" />
                                 
-
                             </div>
                             <div>
                                 <label for="publisher">출판사</label>
@@ -71,11 +67,9 @@
                                 ></textarea>
                             </div>
                         </div>
-
                         <div class="modal-button">
                             <button class="update-modal-close">취소</button>
                             <button type ="submit" class="add-product-complete">완료</button>
-                        </form>
                         </div>
                     </div>
                 </div>
