--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                                     class="header-title-link"
                                 >
                                     <div
-                                        class="header-title-name animated flipInX"
+                                        class="header-title-name animated bounceInDown"
                                     >
                                         Eladin <span>엘라딘이에요!</span>
                                     </div>
@@ -57,7 +57,7 @@
                             </div>
                             <div class="header-title-search">
                                 <div
-                                    class="header-title-search-bar animated flipInX"
+                                    class="header-title-search-bar animated bounceInDown"
                                 >
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
