fix:uri / feat: 비회원 주문조회

--- a/src/pages/guest_orderinfo.html
+++ b/src/pages/guest_orderinfo.html
@@ -59,32 +59,6 @@
                                     <button class="search-button">검색</button>
                                 </div>
                             </div>
-                            <div class="header-title-info">
-                                <div class="header-info-item">
-                                    <a
-                                        href="./cart.html"
-                                        class="header-info-basket"
-                                    >
-                                        <img
-                                            src="https://svgsilh.com/svg/371980.svg"
-                                            alt="장바구니 이미지"
-                                            class="basket-img"
-                                        />
-                                    </a>
-                                </div>
-                                <div class="header-info-item">
-                                    <a
-                                        href="./mypage.html"
-                                        class="header-info-my"
-                                    >
-                                        <img
-                                            src="https://svgsilh.com/svg/158453.svg"
-                                            alt="사람모양 이미지"
-                                            class="my-img"
-                                        />
-                                    </a>
-                                </div>
-                            </div>
                         </nav>
                     </div>
                 </div>
@@ -107,13 +81,7 @@
                             <div class="main-aboutUser">
                                 <div class="top">
                                     <h3 class="user-name">홍길동</h3>
-                                    <a href="./modify_mypage.html"
-                                        ><button class="update-detail-btn">
-                                            내 정보 변경
-                                        </button></a
-                                    >
                                 </div>
-                                <p class="email">eladin@gmail.com</p>
                             </div>
                         </section>
                         <div class="main-orderlist">
@@ -171,5 +139,6 @@
         <script src="../js/isLogin.js"></script>
         <script src="../api/logout.js"></script>
         <script src="../api/search.js"></script>
+        <script src="../js/guestInfoRender.js"></script>
     </body>
 </html>
